// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextLink Primary 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <a
    className="TextLink__StyledTextLink-qefl1h-0 kxSbQp"
    disabled={false}
    href="#"
    onClick={[Function]}
    size="medium"
  >
    Message
  </a>
</div>
`;

exports[`Storyshots TextLink Secondary 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <a
    className="TextLink__StyledTextLink-qefl1h-0 dDUSbT"
    disabled={false}
    href="#"
    onClick={[Function]}
    size="medium"
  >
    Message
  </a>
</div>
`;
